fix: overflow on entire body

--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -20,6 +20,7 @@ body,
     font-optical-sizing: auto;
     font-style: normal;
     color: colr.$black-var-1;
+    overflow-x: hidden;
 }
 
 ol li,
